--- a/public/css/global.css
+++ b/public/css/global.css
@@ -5,7 +5,12 @@ body{
 }
 
 .pointColor{
-  color: #ea535a;
+  color: #ea535a !important;
+}
+
+.pointBackgroundColor{
+  background-color: #ea535a !important;
+  color: white !important;
 }
 
 .navbar-default {
@@ -26,4 +31,61 @@ body{
 
 .display_none{
   display: none !important;
+}
+
+.swal-icon--success__ring{
+  border: 4px solid hsla(358, 65%,69%,.2) !important;
+}
+
+.swal-icon--success{
+  border-color: #ea535a !important;
+}
+
+.swal-icon--success__line{
+  background-color: #ea535a !important;
+}
+
+.swal-button{
+  background-color: #ea535a !important;
+}
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+.help_project_wrapper{
+  width: 211px;
+}
+
+.help_tooltip_img{
+  position: absolute;
+  top: 0px;
+  left: 100%;
+}
+
+.help_tooltip_parent{
+  position: relative;
 }
