--- a/public/css/editor/summernote-crowdticket.css
+++ b/public/css/editor/summernote-crowdticket.css
@@ -23,6 +23,11 @@
   width: 100%;
   height: 100%;
 }
+
+.note-editor .note-editing-area{
+  /*position: static;*/
+}
+
 /*
 u{
   border-bottom-color: blue;
