--- a/public/css/global.css
+++ b/public/css/global.css
@@ -105,6 +105,18 @@ body{
   -webkit-animation: spin 1s ease-in-out infinite;
 }
 
+.loading_size_20 {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 0px;
+  border: 3px solid rgba(234,83,90,.3);
+  border-radius: 50%;
+  border-top-color: #ea535a;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
 @keyframes spin {
   to { -webkit-transform: rotate(360deg); }
 }
@@ -120,4 +132,9 @@ fieldset[disabled] .form-control {
   cursor: not-allowed;
   background-color: #eeeeee;
   opacity: 1;
+}
+
+.swal-button--nosave{
+  background-color: #eeeeee !important;
+  color: black;
 }
