프로젝트 타입 "컬쳐" 추가

--- a/public/css/project/form_body_required.css
+++ b/public/css/project/form_body_required.css
@@ -66,7 +66,7 @@
 }
 
 .project_form_button_subtitle{
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -566,6 +566,10 @@
   margin-top: 22px;
   font-size: 12px;
   margin-left: 5px;
+}
+
+.project_form_required_type_button_resize{
+  width: 194px;
 }
 
 @media (max-width:960px){
