--- a/public/css/goods.css
+++ b/public/css/goods.css
@@ -75,8 +75,14 @@
 }
 
 .project-form-goods-img-wrapper{
+/*
   width: 100%;
   height: 164px;
+  */
+
+  width: 295px;
+  height: 164px;
+  overflow: hidden;
 }
 
 .detail_ticket_md_color_cover{
