--- a/public/css/project/form_body_required.css
+++ b/public/css/project/form_body_required.css
@@ -429,6 +429,7 @@
 }
 
 .title_img_preview{
+  /*
   width: 290px;
   height: 217.5px;
   background-repeat: no-repeat;
@@ -436,6 +437,15 @@
   position: absolute;
   top: 0px;
   left: 0px;
+  */
+
+  max-width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  margin: auto;
 }
 
 .project_form_poster_trash{
@@ -547,6 +557,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .title_img_add_btn_wrapper{
