--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -105,14 +105,24 @@
 }
 
 .project-img {
+  /*
     position:absolute;
     top:0;
     left:0;
     right:0;
     bottom:0;
     max-width:100%;
-    /*height:auto;*/
     height: 100%;
+    width: 100%;
+    */
+
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    max-width:100%;
+    margin: auto;
 }
 
 .project-grid-wrapper .project-thumbnail {
