메인 캐러셀 swiper 로 수정 모바일에서 2칸으로 나오게 수정
이미지 리사이징 이슈 수정

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -364,7 +364,7 @@ body {
 }
 .project-grid-wrapper .project-thumbnail {
 	width:100%;
-	height:230px;
+	/*height:230px;*/
 	-webkit-border-top-left-radius:5px;
 	-webkit-border-top-right-radius:5px;
 		-moz-border-radius-topleft:5px;
