구매 페이지 폭 800px로 고정 디테일 페이지 티켓 달력 깨지는 이슈 수정

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -558,7 +558,7 @@
 #detail_ticket_md{
   /*background-color: #f9f8f6;*/
   margin-left: 15px;
-  display: inline-table;
+  /*display: inline-table;*/
   flex-basis: 410px;
   flex-shrink: 0;
 }
