--- a/public/css/project/form.css
+++ b/public/css/project/form.css
@@ -2,7 +2,7 @@
   min-height: 0%;
 }
 .project-form-container{
-  width: 90%;
+  width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding: 30px 0px;
