--- a/public/css/project/form.css
+++ b/public/css/project/form.css
@@ -8,6 +8,13 @@
   padding: 30px 0px;
 }
 
+.project-create-form-container{
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 0px;
+}
+
 .project-form-tab-container{
   /*display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 80px;*/
