디테일 페이지 타이틀 사이즈 수정. 위아래 간격 수정

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -28,6 +28,7 @@
   font-size: 38px;
   font-weight: 600;
   color: #222;
+  word-break: keep-all;
 }
 
 .detail_hash_tag{
@@ -716,6 +717,14 @@
 
     .detail_story_wrapper iframe{
       width: 100%;
+    }
+
+    .detail_title{
+      font-size: 30px;
+    }
+
+    .detail_top_container{
+      padding: 44px 0;
     }
 }
 
