--- a/public/css/global.css
+++ b/public/css/global.css
@@ -179,3 +179,26 @@ fieldset[disabled] .form-control {
 .loading_util{
   margin-bottom: 0px;
 }
+
+.black-mask{
+  width:100%;
+	height:100%;
+	position:absolute;
+	top:0;
+	bottom:0;
+	background-color:rgba(0,0,0,0.3)
+}
+
+.form_input_base{
+  width: 100%;
+  /*width: 600px;*/
+  height: 38px;
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  border: solid 1px #707070;
+  background-color: #ffffff;
+  font-size: 16px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
