--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -33,7 +33,8 @@
   width: 1050px;
   height: 100%;
 
-  padding: 70px 0px;
+  /*padding: 0px 0px;*/
+  padding-bottom: 60px;
 
 }
 
@@ -43,6 +44,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
+  margin-top: 60px;
 }
 
 .welcome_main_thumb_title_container h4{
@@ -431,6 +433,124 @@
     position:relative;
     z-index:100;
 }
+/*크라우드티켓 매거진 캐러셀 영역 START*/
+.swiper-magazine-container {
+  width: 96.5%;
+  height: 100%;
+  overflow: hidden;
+  /*margin-bottom: 60px;*/
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-magazine-container h4{
+  font-size: 15px;
+  font-weight: 700;
+  margin: 0px;
+  margin-bottom: 13px;
+  letter-spacing: -0.5px;
+}
+
+.swiper-pagination-bullet{
+  width: 30px !important;
+  height: 3px !important;
+  border-radius: 0 !important;
+}
+
+.swiper-pagination-bullet-active{
+  background-color: #000 !important;
+}
+
+.swiper-magazine-pagination-bullet {
+  width: 30px;
+  height: 3px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color:#000;
+  opacity: 1;
+  background: rgba(0,0,0,0.2);
+}
+.swiper-magazine-pagination-bullet-active {
+  color:#fff;
+  background: #007aff;
+}
+
+.magazine_thumbnail_container{
+  /*width: 710px;*/
+  width: 100%;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  margin-bottom: 20px;
+}
+.magazine_thumbnail_image_wrapper{
+  /*width: 100%;*/
+  width: 50%;
+}
+.magazine-thumbnail {
+  position:relative;
+  /*padding-top:75%;*/
+  padding-top:56.25%;
+  overflow:hidden;
+  background-color: white;
+}
+
+.magazine-img {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  max-width:100%;
+  margin: auto;
+}
+
+.magazine_thumb_content_container{
+  width: 50%;
+  padding: 0px 10px;
+  word-break: break-all;
+  text-align: left;
+}
+
+.magazine_thumb_content_title{
+  font-weight: 500;
+  font-size: 30px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 40px;     /* fallback */
+  max-height: 79px;      /* fallback */
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
+.magazine_thumb_content_content{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 20px;
+  max-height: 100px;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  margin-top: 45px;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.swiper-magazine-pagination{
+  text-align: center;
+}
+
+.magazine_thumb_date{
+  font-size: 15px;
+  color: #777;
+  margin-top: 25px;
+  font-weight: 400;
+}
+
+/*크라우드티켓 매거진 캐러셀 영역 END*/
 
 @media (max-width:960px) {
   .project_carousel_container_colOnly{
@@ -612,3 +732,178 @@
 .project_carousel_container_temp{
   padding-bottom: 0px;
 }
+
+
+/*매거진*/
+
+  @media (max-width:1050px) {
+    .swiper-magazine-container h4{
+      margin-bottom: 25px;
+    }
+
+    .magazine_thumb_date{
+      margin-top: 5%;
+    }
+
+    .magazine_thumb_content_content{
+      margin-top: 5%;
+    }
+  }
+
+  @media (max-width:900px) {
+    .magazine_thumb_content_content{
+      -webkit-line-clamp: 4;
+    }
+  }
+
+  @media (max-width:760px) {
+    .magazine_container{
+      width: 100%;
+      padding: 0px 20px;
+    }
+
+    .magazine_thumb_content_content{
+      font-size: 13px;
+      line-height: 20px;
+      margin-top: 2%;
+      -webkit-line-clamp: 5;
+    }
+
+    .magazine_thumb_date{
+      margin-top: 2%;
+    }
+
+    .magazine_thumbnail_container{
+      width: 100%;
+    }
+
+    .magazine_thumb_content_title{
+      font-size: 20px;
+      line-height: 26px;
+    }
+  }
+
+  @media (max-width:670px) {
+    .magazine_thumb_content_content{
+      -webkit-line-clamp: 4;
+    }
+
+    .magazine_thumb_content_content{
+      font-size: 12px;
+    }
+
+    .magazine_thumb_date{
+      font-size: 12px;
+    }
+
+    .magazine_thumb_content_title{
+      font-size: 18px;
+    }
+
+    .magazine_thumbnail_container
+    {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media (max-width:590px) {
+    .magazine_thumb_content_content{
+      -webkit-line-clamp: 3;
+    }
+
+    .magazine_thumb_content_content{
+      font-size: 12px;
+    }
+
+    .magazine_thumb_date{
+      font-size: 12px;
+    }
+
+    .magazine_thumb_content_title{
+      font-size: 18px;
+    }
+
+    .swiper-pagination-bullet{
+      width: 20px !important;
+    }
+  }
+
+  @media (max-width:520px) {
+    .magazine_thumb_content_content{
+      -webkit-line-clamp: 2;
+    }
+
+    .swiper-magazine-container{
+      margin-top: 30px;
+      /*margin-bottom: 30px;*/
+    }
+
+    .welcome_main_thumb_title_container{
+      margin-top: 30px;
+    }
+  }
+
+  @media (max-width:450px) {
+    .magazine_thumb_content_title{
+      font-size: 14px;
+      line-height: 18px;
+    }
+
+    .magazine_thumb_content_content{
+      margin-top: 4%;
+      font-size: 10px;
+      line-height: 13px;
+      -webkit-line-clamp: 3;
+    }
+
+    .magazine_thumb_date{
+      font-size: 9px;
+      margin-top: 4%;
+    }
+
+    .magazine_title{
+      margin-bottom: 55px;
+    }
+
+    .magazine_thumbnail_container{
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (max-width:400px) {
+    .magazine_thumb_content_content{
+      -webkit-line-clamp: 2;
+    }
+  }
+
+  @media (max-width:320px) {
+    .magazine_thumb_content_title{
+      font-size: 11px;
+      line-height: 13px;
+    }
+
+    .magazine_thumb_content_content{
+      margin-top: 5%;
+      font-size: 10px;
+      line-height: 13px;
+      -webkit-line-clamp: 2;
+    }
+
+    .magazine_thumb_date{
+      font-size: 9px;
+      margin-top: 5px;
+    }
+
+    .magazine_title{
+      margin-bottom: 55px;
+    }
+
+    .magazine_thumbnail_container{
+      margin-bottom: 20px;
+    }
+
+    .swiper-pagination-bullet{
+      width: 15px !important;
+    }
+  }
+/*매저긴 end*/
