--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -35,6 +35,9 @@
 
 .project_form_title_wrapper{
   text-align: center;
+  font-size: 38px;
+  font-weight: bold;
+  margin-top: 40px;
 }
 
 .project-form-content{
@@ -55,6 +58,14 @@
 }
 
 .project-form-content-title{
+  flex-basis: 200px;
+  flex-shrink: 0;
+  font-size: 15px;
+  color: #666;
+  text-align: left;
+  margin-bottom: 5px;
+  font-weight: bold;
+  /*
   display: table;
   text-align: left;
   padding-left: 0px;
@@ -70,6 +81,11 @@
   line-height: 2.78;
   letter-spacing: normal;
   color: black;
+  */
+}
+
+.project_form_input_container{
+  margin-bottom: 18px;
 }
 
 .error{
@@ -133,11 +149,25 @@
   color: white;
   background-color: #4267b2;
   padding: 5px 0px;
-  border-radius: 8px;
+  border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
+  /*margin-bottom: 15px;*/
+}
+
+#login_social_google_button_wrapper{
+  width: 79.6%;
+  text-align: center;
+  background-color: white;
+  color: #444;
+  border-radius: 5px;
+  padding: 5px 0px;
+
+  margin-top: 10px;
   margin-bottom: 15px;
+
+  height: 45.6px;
 }
 
 @media (max-width: 768px){
