굿즈 이미지 표시 버그 수정

--- a/public/css/goods.css
+++ b/public/css/goods.css
@@ -78,7 +78,8 @@
 .project-form-goods-img-wrapper{
   position: relative;
   height: 0px;
-  padding-bottom: 75%;
+  /*padding-bottom: 75%;*/
+  padding-bottom: 60%;
 }
 
 .project_form_goods_img_origin_size{
