크라우드티켓 3.5 메인 디자인 개발

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,7 +9,7 @@
 
 
 body {
-	font-family:'Noto Sans KR',sans-serif;
+	/*font-family:'Noto Sans KR',sans-serif;*/
 }
 .first-container {
 	padding-top:50px;
@@ -745,7 +745,7 @@ footer .container li {
 	margin-left:0px !important;
 }
 .naver-icon {
-	width:19px;
+	width:15px;
 	height:auto;
 }
 @media (max-width:768px) {
