폰이 이슈 수정

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,7 +9,7 @@
 
 
 body {
-	/*font-family:'Noto Sans KR',sans-serif;*/
+	font-family:'Noto Sans KR',sans-serif;
 }
 .first-container {
 	padding-top:50px;
