--- a/public/css/global.css
+++ b/public/css/global.css
@@ -203,3 +203,57 @@ fieldset[disabled] .form-control {
   padding-left: 10px;
   padding-right: 10px;
 }
+
+
+
+/*3.5 글로벌 START*/
+.welcome_content_container{
+  width:1060px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.welcome_content_wrapper{
+  margin-top: 64px;
+}
+
+.cr_label{
+  font-size: 14px !important;
+  color:#808080 !important;
+  font-weight: normal !important;
+  margin-bottom: 8px !important;
+}
+
+.cr_input{
+  width: 390px;
+  height: 56px;
+  border-radius: 5px;
+  border: solid 1px #e6e6e6;
+}
+
+@media (max-width:1060px) {
+  .welcome_content_container{
+    /*width: 93%;*/
+    width: 600px;
+  }
+
+  .welcome_content_wrapper{
+    margin-top: 40px;
+  }
+}
+
+@media (max-width:650px) {
+  .welcome_content_container{
+    width: 93%;
+  }
+  .container{
+    width: 100%;
+  }
+}
+
+@media (max-width:320px) {
+  .welcome_content_container{
+    width: 300px;
+  }
+}
+/*3.5 글로벌 END*/
