--- a/public/css/project/form.css
+++ b/public/css/project/form.css
@@ -134,6 +134,71 @@
   border-radius: 4px;
 }
 
+.blueprint_check_popup{
+  /*width: 40%;*/
+  border-radius: 10px;
+  box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.1);
+}
+
+.blueprint_check_pop_container{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+}
+
+.blueprint_check_pop_title{
+  font-size: 20px;
+  font-weight: 500;
+  color: #4d4d4d;
+}
+
+.blueprint_check_pop_line{
+  width: 100%;
+  height: 1px;
+  opacity: 0.2;
+  background-color: #acacac;
+  margin-top: 32px;
+  margin-bottom: 28px;
+}
+
+.blueprint_check_pop_subtitle{
+  font-size: 14px;
+  color: #1a1a1a;
+}
+
+.blueprint_check_pop_contact_bg{
+  width: 100%;
+  height: 60px;
+  border-radius: 10px;
+  background-color: #f7f7f7;
+  margin-top: 16px;
+  font-size: 14px;
+}
+
+.blueprint_check_pop_contact_bg>p{
+  padding-top: 20px;
+}
+
+.blueprint_check_pop_button{
+  width: 100%;
+  height: 56px;
+  border-radius: 5px;
+  background-color: #43c9f0;
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  border: 0;
+  margin-top: 28px;
+  margin-bottom: 12px;
+}
+
+.blueprint_check_pop_foot{
+  font-size: 12px;
+  color: #808080;
+  margin-bottom: 40px;
+}
+
 @media (max-width:1030px){
   .project-form-container{
     width: 100%;
@@ -148,5 +213,11 @@
   .project-form-tab-wrapper{
     padding-top: 0px;
     padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 488px){
+  .blueprint_check_pop_container{
+    width: 100%; 
   }
 }
