--- a/public/css/mannayo.css
+++ b/public/css/mannayo.css
@@ -1037,7 +1037,7 @@ p{
 
   .mannayo_thumb_container{
     width: 250px;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
     position: relative;
   }
 
